--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <canvas class="canvas" id='canvas'>
+        Ваш браузер не поддерживает canvas :(
+    </canvas>
     <script src="js/script.js"></script>
 </body>
 </html>
