Included fabric js

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 1</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-    <canvas class="canvas" id='canvas'>
+<body class="page__body">
+
+    <canvas class="canvas" height="500px" width="500px" id='canvas'>
         Ваш браузер не поддерживает canvas :(
     </canvas>
+
+    <script src="js/fabric.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
