--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         Ваш браузер не поддерживает canvas :(
     </canvas>
 
-    <script src="js/fabric.min.js"></script>
+    <script src="js/fabric.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
