--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="page__body">
 
-    <canvas class="canvas" height="500px" width="500px" id='canvas'>
+    <canvas class="canvas" height="0" width="0" id='canvas'>
         Ваш браузер не поддерживает canvas :(
     </canvas>
 
