--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 1</title>
+    <title>Lab 3 vmik7</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="page__body">
